math-core/tests/snapshots/conversion_test__sine_function_brackets.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\sin\\{x\\}"
---
<math>
    <mo lspace="0" rspace="0">sin</mo>
    <mo stretchy="false">{</mo>
    <mi>x</mi>
    <mo stretchy="false">}</mo>
</math>
