math-core/tests/snapshots/conversion_test__sine_function_stretch_parens.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\sin\\left(x\\right)"
---
<math>
    <mo lspace="0" rspace="0">sin</mo>
    <mrow>
        <mo>(</mo>
        <mi>x</mi>
        <mo>)</mo>
    </mrow>
</math>
