math-core/tests/snapshots/conversion_test__sine_sine.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\sin\\sin x"
---
<math>
    <mo lspace="0" rspace="0.1667em">sin</mo>
    <mo lspace="0" rspace="0.1667em">sin</mo>
    <mi>x</mi>
</math>
