math-core/tests/snapshots/conversion_test__slashed.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\slashed{\\partial}"
---
<math>
    <mi>∂&#x0338;</mi>
</math>
