math-core/tests/snapshots/conversion_test__special_symbols.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\%\\$\\#"
---
<math>
    <mi>%</mi>
    <mi>$</mi>
    <mi>#</mi>
</math>
