math-core/tests/snapshots/conversion_test__sqrt_log_braces.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\sqrt{\\log}"
---
<math>
    <msqrt>
        <mo lspace="0" rspace="0">log</mo>
    </msqrt>
</math>
