math-core/tests/snapshots/conversion_test__square_root.snap
---
source: math-core/tests/conversion_test.rs
expression: "\\sqrt 2"
---
<math>
    <msqrt>
        <mn>2</mn>
    </msqrt>
</math>
